Fixes Permission Badge Alignment

--- a/material.less
+++ b/material.less
@@ -20,6 +20,11 @@
     height: 35px;
 }
 
+.Badge, .Badge .Badge-icon {
+    font-size: 12.32px;
+    padding-top: .3px;
+}
+
 .App-header {
     padding: 8px;
     height: 52px;
